# llm-craft

./: README.md  pyproject.toml
data/tools/: __init__.py  download_gpt335m_model.py  download_gpt_model.py  download_instruction_data.py  download_spam_data.py  download_verdict_file.py  gpt_download.py
demo/: bpe_demo.py  embedding256_demo.py  embedding_demo.py  feed_forward_demo.py  gelu_demo.py  gpt_model_demo.py  layer_norm_demo.py  multi_head_attention_demo.py  transformer_block_demo.py
demo/others/: __init__.py  casual_attention.py  compute_attn_batch.py  compute_attn_one.py  compute_self_attn_one.py  dataloader_v1.py  multi_head_attention_wrapper.py  self_attention_v1.py  self_attention_v2.py
llm_example/gpt_example/gpt_model/: load_gpt_model.py  load_weights_into_gpt.py
llm_example/gpt_example/instruction_example/: instruction_dataset.py  instruction_tools.py  train_model_by_instruction.py
llm_example/gpt_example/spam_example/: classifier_model.py  classifier_tools.py  spam_dataset.py  train_classifier_simple.py  train_model_by_classifier.py
llm_example/gpt_example/verdict_example/: gen_text_with_no_trained_model.py  gen_text_with_trained_model.py  train_model_by_verdict.py  verdict_dataset.py
model/: config.py  feed_forward.py  gelu.py  gpt_model.py  multi_head_attention.py  trainer.py  transformer_block.py
test/: test_gelu.py  test_instruction_tools.py
tools/: __init__.py  generate_text.py  log.py  matplot.py  model_tool.py
