[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-craft"
version = "1.0.0"
description = "LLM from scratch learning project"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "model*", "demo*", "data*", "llm_example*"]

[tool.pyright]
pythonPlatform = "All"
extraPaths = ["."]
